data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef signed int int32_t;
struct HdfSListNode {
    struct HdfSListNode *next;
};
struct HdfSList {
    struct HdfSListNode *root;
};
struct HdfSListIterator {
    int stepOnNext;
    struct HdfSListNode *prev;
    struct HdfSListNode *curr;
};
typedef void (*HdfSListDeleter)(struct HdfSListNode *);
void HdfSListInit(struct HdfSList *list);
void HdfSListFlush(struct HdfSList *list, HdfSListDeleter deleter);
void HdfSListIteratorInit(struct HdfSListIterator *iterator, const struct HdfSList *list);
_Bool HdfSListIteratorHasNext(const struct HdfSListIterator *iterator);
struct HdfSListNode *HdfSListIteratorNext(struct HdfSListIterator *iterator);
struct OsalMutex {
    void *realMutex;
};
int32_t OsalMutexInit(struct OsalMutex *mutex);
int32_t OsalMutexDestroy(struct OsalMutex *mutex);
int32_t OsalMutexLock(struct OsalMutex *mutex);
int32_t OsalMutexUnlock(struct OsalMutex *mutex);
typedef unsigned int UINT32;
typedef UINT32 size_t;
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));
void *OsalMemCalloc(size_t size);
void OsalMemFree(void *mem);