data/rq1/k5/intermediate/host__25c1898e1626/workspace/final_projects/host__25c1898e1626/translate_by_qwen3_coder/.c2r_bindgen_extern/hdf_observer_record_728ded55.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSListNode {
    pub next: *mut HdfSListNode,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSList {
    pub root: *mut HdfSListNode,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSListIterator {
    pub stepOnNext: ::core::ffi::c_int,
    pub prev: *mut HdfSListNode,
    pub curr: *mut HdfSListNode,
}
pub type HdfSListDeleter = ::core::option::Option<unsafe extern "C" fn(arg1: *mut HdfSListNode)>;
unsafe extern "C" {
    pub fn HdfSListInit(list: *mut HdfSList);
}
unsafe extern "C" {
    pub fn HdfSListFlush(list: *mut HdfSList, deleter: HdfSListDeleter);
}
unsafe extern "C" {
    pub fn HdfSListIteratorInit(iterator: *mut HdfSListIterator, list: *const HdfSList);
}
unsafe extern "C" {
    pub fn HdfSListIteratorHasNext(iterator: *const HdfSListIterator) -> bool;
}
unsafe extern "C" {
    pub fn HdfSListIteratorNext(iterator: *mut HdfSListIterator) -> *mut HdfSListNode;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalMutex {
    pub realMutex: *mut ::core::ffi::c_void,
}
unsafe extern "C" {
    pub fn OsalMutexInit(mutex: *mut OsalMutex) -> i32;
}
unsafe extern "C" {
    pub fn OsalMutexDestroy(mutex: *mut OsalMutex) -> i32;
}
unsafe extern "C" {
    pub fn OsalMutexLock(mutex: *mut OsalMutex) -> i32;
}
unsafe extern "C" {
    pub fn OsalMutexUnlock(mutex: *mut OsalMutex) -> i32;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
